tabs fixed and text made invisible.

--- a/style2.css
+++ b/style2.css
@@ -33,4 +33,5 @@
 }
 .body .text{
     flex: 80;
+    opacity: 0;
 }
